<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity"
    android:layout_gravity="fill_vertical"
    android:orientation="vertical">

    <Button
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_events" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_event"/>
        <Button
            android:id="@+id/places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_places"/>

    </LinearLayout>
</LinearLayout>