<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SingleActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/icon_single"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:src="@drawable/teatr"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:cropToPadding="true"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:padding="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="25sp"
                    android:text="teatr im. ludwika solskiego"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_gravity="center_vertical"
                            android:background="@color/colorPrimary">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAllCaps="true"
                                android:textSize="20sp"
                                android:textColor="@color/white"
                                android:text="@string/single_info"/>
                        </LinearLayout>

                    </LinearLayout>
                    <TextView
                        android:id="@+id/single_opis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:padding="10sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="Teatr im. Ludwika Solskiego w Tarnowie – samorządowa instytucja kultury m. Tarnowa, teatr dramatyczny działający od 1945 w budynku byłego Polskiego Towarzystwa Gimnastycznego „Sokół”"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_gravity="center_vertical"
                            android:background="@color/colorPrimary">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAllCaps="true"
                                android:textSize="20sp"
                                android:textColor="@color/white"
                                android:text="@string/single_road"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:text="ul. Mickiewicza 4"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:layout_weight="1"
                            android:textSize="15sp"/>
                        <ImageView
                            android:id="@+id/localize"
                            android:layout_width="20sp"
                            android:layout_height="20sp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:onClick="startMap"
                            android:clickable="true"
                            android:src="@drawable/baseline_map_black_18dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorPrimary">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:text="@string/single_events"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>